--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -164,6 +164,7 @@
             <Style.Triggers>
                 <Trigger Property="IsMouseOver" Value="True">
                     <Setter Property="TextDecorations" Value="Underline"/>
+                    <Setter Property="Foreground" Value="{StaticResource PrimaryBlueBrush}"/>
                 </Trigger>
             </Style.Triggers>
         </Style>
