--- a/App.xaml
+++ b/App.xaml
@@ -2,8 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:bankrupt_piterjust"
-             xmlns:converters="clr-namespace:bankrupt_piterjust.Converters"
-             StartupUri="MainWindow.xaml">
+             xmlns:converters="clr-namespace:bankrupt_piterjust.Converters">
     <Application.Resources>
         <!-- Converters -->
         <converters:StringEqualsToVisibilityConverter x:Key="StringEqualsToVisibilityConverter"/>
