--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -253,12 +253,12 @@
                 </StackPanel>
             
                 <!-- Кнопки действий -->
-                <StackPanel Grid.Column="1" Orientation="Horizontal" VerticalAlignment="Center">
-                    <Button Content=" Сменить пользователя " 
+                <StackPanel Grid.Column="1" Orientation="Horizontal" VerticalAlignment="Center" Margin="0,0,-10,0">
+                    <Button Content="Сменить пользователя" 
                             Command="{Binding ShowLoginWindowCommand}" 
                             Style="{StaticResource SecondaryButton}" 
                             Margin="0,0,10,0" 
-                            ToolTip="Сменить пользователя системы" Height="40" RenderTransformOrigin="0.5,0.5">
+                            ToolTip="Сменить пользователя системы" Height="40" RenderTransformOrigin="0.5,0.5" Width="150">
                         <Button.RenderTransform>
                             <TransformGroup>
                                 <ScaleTransform/>
@@ -311,7 +311,7 @@
                     </Border>
                 </StackPanel>
 
-                <Button Grid.Column="1" Content=" + Добавить должника " Style="{StaticResource PrimaryButton}" Command="{Binding AddDebtorCommand}" HorizontalAlignment="Right"/>
+                <Button Grid.Column="1" Content=" + Добавить должника " Style="{StaticResource PrimaryButton}" Command="{Binding AddDebtorCommand}" HorizontalAlignment="Left"/>
             </Grid>
 
             <!-- 3: Вкладки верхнего уровня -->
