Удален старый элемент Button и добавлен новый
- Удален элемент Button, связанный с `SelectedDebtor.MainCategory`, который использовал конвертер и значения по умолчанию.
- Добавлен новый элемент Button с фиксированным содержимым "Добавить в архив".
- Новый Button связан с командой `ArchiveDebtorCommand` и стилизован как вторичный элемент.
- Видимость нового Button контролируется свойством `SelectedDebtor.MainCategory` с использованием другого конвертера.

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -646,7 +646,7 @@
                             IsEnabled="{Binding CanGenerateContract}"
                             Margin="0,30,0,0"/>
 
-                    <Button Content="{Binding SelectedDebtor.MainCategory, Converter={StaticResource StringEqualsToVisibilityConverter}, ConverterParameter=Архив, FallbackValue=Добавить в архив, TargetNullValue=Добавить в архив}"
+                    <Button Content="Добавить в архив"
                             Command="{Binding ArchiveDebtorCommand}" 
                             CommandParameter="{Binding SelectedDebtor}"
                             Style="{StaticResource SecondaryButton}" 
