Удален обработчик события KeyDown
- Удален обработчик события `KeyDown` из файла `LoginWindow.xaml`.
- Остальные атрибуты, включая `Background` и `Icon`, остались без изменений.

--- a/Views/LoginWindow.xaml
+++ b/Views/LoginWindow.xaml
@@ -8,8 +8,7 @@
         mc:Ignorable="d"
         Title="ПитерЮст. Банкротство. - Авторизация" Height="440" Width="400"
         WindowStartupLocation="CenterScreen" ResizeMode="NoResize"
-        Background="#F8F9FA" Icon="/fav.png"
-        KeyDown="Window_KeyDown">
+        Background="#F8F9FA" Icon="/fav.png">
 
     <Window.DataContext>
         <vm:LoginViewModel/>
