Добавлен обработчик событий KeyDown
- В файл `LoginWindow.xaml` был добавлен обработчик событий `Window_KeyDown`, что позволяет окну реагировать на нажатия клавиш.

--- a/Views/LoginWindow.xaml
+++ b/Views/LoginWindow.xaml
@@ -9,6 +9,7 @@
         Title="ПитерЮст. Банкротство. - Авторизация" Height="440" Width="400"
         WindowStartupLocation="CenterScreen" ResizeMode="NoResize"
         Background="#F8F9FA" Icon="/fav.png">
+        KeyDown="Window_KeyDown">
 
     <Window.DataContext>
         <vm:LoginViewModel/>
