--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -565,7 +565,8 @@
                 Padding="20" 
                 Width="320">
             <ScrollViewer VerticalScrollBarVisibility="Auto">
-                <StackPanel>
+                <StackPanel x:Name="ReadOnlyPanel"
+                            Visibility="{Binding IsEditMode, Converter={StaticResource BoolToColorConverter}, ConverterParameter=Collapsed|Visible}">
                     <!-- Заголовок -->
                     <TextBlock Text="Информация о должнике" 
                               FontSize="18" 
@@ -608,13 +609,47 @@
                             Margin="0,10,0,0"
                             Visibility="{Binding SelectedDebtor.MainCategory, Converter={StaticResource StringNotEqualsToVisibilityConverter}, ConverterParameter=Архив}"/>
 
+                    <Button Content="Редактировать"
+                            Command="{Binding EditDebtorCommand}"
+                            Style="{StaticResource SecondaryButton}"
+                            Height="40"
+                            Margin="0,10,0,0"/>
+
                     <Button Content="Восстановить из архива"
-                            Command="{Binding RestoreDebtorCommand}" 
+                            Command="{Binding RestoreDebtorCommand}"
                             CommandParameter="{Binding SelectedDebtor}"
                             Style="{StaticResource SecondaryButton}"
                             Height="40"
                             Margin="0,10,0,0"
                             Visibility="{Binding SelectedDebtor.MainCategory, Converter={StaticResource StringEqualsToVisibilityConverter}, ConverterParameter=Архив}"/>
+                </StackPanel>
+
+                <StackPanel x:Name="EditPanel" Visibility="{Binding IsEditMode, Converter={StaticResource BooleanToVisibilityConverter}}">
+                    <TextBlock Text="Фамилия" Style="{StaticResource DetailLabelStyle}"/>
+                    <TextBox Text="{Binding SelectedPerson.LastName}" Style="{StaticResource FormTextBox}"/>
+
+                    <TextBlock Text="Имя" Style="{StaticResource DetailLabelStyle}"/>
+                    <TextBox Text="{Binding SelectedPerson.FirstName}" Style="{StaticResource FormTextBox}"/>
+
+                    <TextBlock Text="Отчество" Style="{StaticResource DetailLabelStyle}"/>
+                    <TextBox Text="{Binding SelectedPerson.MiddleName}" Style="{StaticResource FormTextBox}"/>
+
+                    <TextBlock Text="Телефон" Style="{StaticResource DetailLabelStyle}"/>
+                    <TextBox Text="{Binding SelectedPerson.Phone}" Style="{StaticResource FormTextBox}"/>
+
+                    <TextBlock Text="Email" Style="{StaticResource DetailLabelStyle}"/>
+                    <TextBox Text="{Binding SelectedPerson.Email}" Style="{StaticResource FormTextBox}"/>
+
+                    <Button Content="Сохранить"
+                            Command="{Binding SaveDebtorCommand}"
+                            Style="{StaticResource PrimaryButton}"
+                            Height="40"
+                            Margin="0,20,0,0"/>
+                    <Button Content="Отмена"
+                            Command="{Binding CancelEditCommand}"
+                            Style="{StaticResource SecondaryButton}"
+                            Height="40"
+                            Margin="0,10,0,0"/>
                 </StackPanel>
             </ScrollViewer>
         </Border>
